<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icon_map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icon_user"
        android:title="@string/title_user" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icon_weather"
        android:title="@string/title_weather" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/icon_about"
        android:title="@string/title_about" />


</menu>
